frontend/test/should_fail/matchclassimplementsnondefdef_002.grg
#using "matchclassmodel.gm"

test t() implements shared
{
---
	def -e:Edge->;
}

match class shared
{
	-e:Edge->;
}
